--- a/app/src/main/res/layout/activity_card_add.xml
+++ b/app/src/main/res/layout/activity_card_add.xml
@@ -8,15 +8,36 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.socialimprover.saldotuc.app.CardAddActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_label"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameField"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:inputType="text"
-        android:hint="@string/name_hint" />
+        android:hint="@string/name_hint">
+
+        <requestFocus/>
+    </EditText>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/card_label"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/nameField"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -24,8 +45,73 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/cardField"
-        android:layout_below="@+id/nameField"
+        android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:maxLength="8"
         android:hint="@string/card_hint" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/notification_label"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/cardField"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/phone_label"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/phoneField"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:maxLength="8"
+        android:hint="@string/phone_hint" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hour_label"
+        android:id="@+id/textView5"
+        android:layout_below="@+id/phoneField"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/hour_spinner"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/ampm_spinner" />
+
+    <Spinner
+        android:layout_width="96dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/ampm_spinner"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentRight="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/verification_hint"
+        android:id="@+id/textView"
+        android:layout_below="@+id/hour_spinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
