--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,6 @@
     <item android:id="@+id/action_card_add"
         android:title="@string/menu_card_add_label"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_new"/>
 </menu>
