--- a/app/src/main/res/layout/activity_card_add.xml
+++ b/app/src/main/res/layout/activity_card_add.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/name_label"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
@@ -33,6 +34,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/card_label"
         android:id="@+id/textView3"
         android:layout_below="@+id/nameField"
@@ -54,6 +56,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/notification_label"
         android:id="@+id/textView6"
         android:layout_below="@+id/cardField"
@@ -63,6 +66,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/phone_label"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView6"
@@ -84,6 +88,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/hour_label"
         android:id="@+id/textView5"
         android:layout_below="@+id/phoneField"
