--- a/app/src/main/res/layout/activity_card_add.xml
+++ b/app/src/main/res/layout/activity_card_add.xml
@@ -8,48 +8,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.socialimprover.saldotuc.app.CardAddActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/name_label"
-        android:id="@+id/nameLabel"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameField"
-        android:layout_below="@+id/nameLabel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp"
         android:inputType="text"
         android:hint="@string/name_hint">
 
         <requestFocus/>
     </EditText>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/card_label"
-        android:id="@+id/cardLabel"
-        android:layout_below="@+id/nameField"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:ems="10"
         android:id="@+id/cardField"
-        android:layout_below="@+id/cardLabel"
+        android:layout_below="@+id/nameField"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp"
         android:maxLength="8"
         android:hint="@string/card_hint" />
 
@@ -57,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/card_checkbox_label"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/darker_gray"
         android:id="@+id/notificationCheckBox"
         android:layout_below="@+id/cardField"
         android:layout_alignParentLeft="true"
@@ -70,32 +51,24 @@
         android:layout_below="@id/notificationCheckBox"
         android:visibility="invisible" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/phone_label"
-            android:id="@+id/phoneLabel"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:inputType="number"
             android:ems="10"
             android:id="@+id/phoneField"
-            android:layout_below="@+id/phoneLabel"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:maxLength="8"
             android:hint="@string/phone_hint" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/hour_label"
+            android:textColor="@android:color/darker_gray"
             android:id="@+id/hourLabel"
             android:layout_below="@+id/phoneField"
             android:layout_alignParentLeft="true"
@@ -119,7 +92,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="4dp"
             android:text="@string/verification_hint"
+            android:textColor="@android:color/darker_gray"
             android:id="@+id/textInfo"
             android:layout_below="@+id/hour_spinner"
             android:layout_alignParentLeft="true"
