--- a/app/src/main/res/drawable/card_item.xml
+++ b/app/src/main/res/drawable/card_item.xml
@@ -1,16 +1,23 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item >
+        <shape
+            android:shape="rectangle">
 
-    <corners
-        android:radius="2dp" />
+            <solid android:color="#dddddd" />
 
-    <padding
-        android:bottom="8dp"
-        android:left="8dp"
-        android:right="8dp"
-        android:top="8dp" />
+            <corners android:radius="2dp"/>
 
-    <solid
-        android:color="@android:color/white"/>
+        </shape>
+    </item>
+    <item android:bottom="1dp">
+        <shape
+            android:shape="rectangle">
 
-</shape>
+            <corners android:radius="2dp"/>
+
+            <solid android:color="@android:color/white"/>
+
+        </shape>
+    </item>
+</layer-list>
