--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/light_gray"
     tools:context=".MainActivity">
 
     <ListView
@@ -15,7 +12,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:divider="@android:color/transparent"
-        android:dividerHeight="8dp">
+        android:paddingBottom="@dimen/cards_list_vertical_margin"
+        android:clipToPadding="false">
     </ListView>
 
 </RelativeLayout>
