--- a/app/src/main/res/values/colors_apptheme.xml
+++ b/app/src/main/res/values/colors_apptheme.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="light_gray">#efefef</color>
     <color name="apptheme_color">#1f7fbe</color>
 </resources>
