--- a/app/src/main/res/drawable/card_item_actions.xml
+++ b/app/src/main/res/drawable/card_item_actions.xml
@@ -5,16 +5,16 @@
 
             <solid android:color="#dddddd" />
 
-            <corners android:radius="2dp"/>
+            <corners android:bottomLeftRadius="2dp" android:topLeftRadius="2dp" />
 
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
 
-            <corners android:radius="2dp"/>
+            <corners android:bottomLeftRadius="2dp" android:topLeftRadius="2dp" />
 
-            <solid android:color="@android:color/white"/>
+            <solid android:color="#517fca"/>
 
         </shape>
     </item>
