--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,18 +1,46 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:background="@android:color/transparent" >
+
+    <LinearLayout
+        android:layout_width="192dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/cards_list_horizontal_margin"
+        android:layout_marginTop="@dimen/cards_list_vertical_margin"
+        android:paddingBottom="@dimen/cards_list_vertical_padding"
+        android:paddingTop="@dimen/cards_list_vertical_padding"
+        android:id="@+id/actionsLayout"
+        android:background="@drawable/card_item_actions" >
+
+        <Button
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/card_balance_background" />
+
+        <Button
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/card_edit_background" />
+
+        <Button
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/card_discard_background" />
+
+    </LinearLayout>
 
     <RelativeLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/cards_list_horizontal_margin"
         android:layout_marginRight="@dimen/cards_list_horizontal_margin"
         android:layout_marginTop="@dimen/cards_list_vertical_margin"
-        android:paddingBottom="8dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="6dp"
-        android:background="@drawable/card_item">
+        android:paddingBottom="@dimen/cards_list_vertical_padding"
+        android:paddingLeft="@dimen/cards_list_horizontal_padding"
+        android:paddingRight="@dimen/cards_list_horizontal_padding"
+        android:paddingTop="@dimen/cards_list_vertical_padding"
+        android:id="@+id/infoLayout"
+        android:background="@drawable/card_item" >
 
         <TextView
             android:layout_width="match_parent"
@@ -23,7 +51,7 @@
             android:layout_marginBottom="4dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,7 +61,7 @@
             android:id="@+id/cardNumber"
             android:layout_below="@+id/cardName"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,7 +71,8 @@
             android:id="@+id/cardBalance"
             android:layout_below="@+id/cardName"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
-</LinearLayout>
+
+</RelativeLayout>
