--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="cards_list_horizontal_margin">8dp</dimen>
     <dimen name="cards_list_vertical_margin">8dp</dimen>
+    <dimen name="cards_list_horizontal_padding">10dp</dimen>
+    <dimen name="cards_list_vertical_padding">8dp</dimen>
 </resources>
