refactorizar ids card_item

--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -14,21 +14,21 @@
         android:background="@drawable/card_item_actions" >
 
         <Button
-            android:id="@+id/card_action_balance"
+            android:id="@+id/cardActionBalance"
             android:layout_width="64dp"
             android:layout_height="match_parent"
             android:background="@drawable/card_balance_background"
             android:focusable="false" />
 
         <Button
-            android:id="@+id/card_action_edit"
+            android:id="@+id/cardActionEdit"
             android:layout_width="64dp"
             android:layout_height="match_parent"
             android:background="@drawable/card_edit_background"
             android:focusable="false" />
 
         <Button
-            android:id="@+id/card_action_delete"
+            android:id="@+id/cardActionDelete"
             android:layout_width="64dp"
             android:layout_height="match_parent"
             android:background="@drawable/card_discard_background"
