--- a/app/src/main/res/drawable/card_item_actions.xml
+++ b/app/src/main/res/drawable/card_item_actions.xml
@@ -3,16 +3,16 @@
     <item >
         <shape android:shape="rectangle">
 
-            <solid android:color="#dddddd" />
+            <corners android:radius="2dp"/>
 
-            <corners android:bottomLeftRadius="2dp" android:topLeftRadius="2dp" />
+            <solid android:color="#dddddd" />
 
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
 
-            <corners android:bottomLeftRadius="2dp" android:topLeftRadius="2dp" />
+            <corners android:radius="2dp"/>
 
             <solid android:color="#517fca"/>
 
