--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
-    tools:context=".MainActivity">
+    tools:context="com.socialimprover.saldotuc.app.MainActivity">
 
     <ListView
         android:id="@+id/cardList"
