--- a/app/src/main/res/layout/activity_card_statistics.xml
+++ b/app/src/main/res/layout/activity_card_statistics.xml
@@ -10,6 +10,7 @@
         android:id="@+id/mySimpleXYPlot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         androidPlot.graphWidget.marginBottom="15dp"
         androidPlot.graphWidget.marginLeft="15dp"
         androidPlot.graphWidget.marginRight="5dp"
