--- a/app/src/main/res/layout/activity_card_update.xml
+++ b/app/src/main/res/layout/activity_card_update.xml
@@ -42,14 +42,15 @@
         android:id="@+id/notificationCheckBox"
         android:layout_below="@+id/cardField"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/notificationLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/notificationCheckBox"
-        android:visibility="invisible" >
+        android:visibility="gone" >
 
         <EditText
             android:layout_width="match_parent"
