--- a/app/src/main/res/layout/activity_card_statistics.xml
+++ b/app/src/main/res/layout/activity_card_statistics.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:layout_margin="0dp"
     android:padding="0dp"
-    tools:context="com.socialimprover.saldotuc.app.CardStatisticsActivity">
+    tools:context="com.socialimprover.saldotuc.CardStatisticsActivity">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/mySimpleXYPlot"
