--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.socialimprover.saldotuc.app.PhoneVerificationActivity">
+    tools:context="com.socialimprover.saldotuc.PhoneVerificationActivity">
 
     <TextView
         android:text="@string/verification_label"
