empty view en cards list

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true">
 
         <ListView
-            android:id="@+id/cardList"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
@@ -21,9 +21,34 @@
             android:divider="@android:color/transparent"
             android:paddingBottom="@dimen/cards_list_vertical_margin"
             android:clipToPadding="false"
-            android:listSelector="@color/card_item">
-        </ListView>
+            android:listSelector="@color/card_item" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="Cards Empty"
+            android:src="@drawable/cards_empty"
+            android:id="@+id/imageView"
+            android:layout_above="@+id/textView" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No hay tarjetas"
+            android:textColor="#cfcfcf"
+            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textView"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
