--- a/app/src/main/res/values-v14/styles_saldotuc.xml
+++ b/app/src/main/res/values-v14/styles_saldotuc.xml
@@ -37,6 +37,7 @@
 
     <style name="ActionBar.Solid.Saldotuc" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@drawable/ab_solid_saldotuc</item>
+        <item name="android:icon">@drawable/actionbar_icon</item>
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_saldotuc</item>
         <item name="android:backgroundSplit">@drawable/ab_bottom_solid_saldotuc</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Saldotuc</item>
