first draft lollipop, a lot of changes

--- a/app/src/main/res/layout/activity_card_statistics.xml
+++ b/app/src/main/res/layout/activity_card_statistics.xml
@@ -2,14 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="0dp"
-    android:padding="0dp"
     tools:context="com.socialimprover.saldotuc.CardStatisticsActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/mySimpleXYPlot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
         android:visibility="gone"
         androidPlot.graphWidget.marginBottom="15dp"
         androidPlot.graphWidget.marginLeft="15dp"
