--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
     tools:context="com.socialimprover.saldotuc.MainActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true">
+        android:layout_below="@+id/toolbar">
 
         <ListView
             android:id="@android:id/list"
@@ -50,5 +52,37 @@
             android:id="@+id/textView"/>
 
     </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/fab_action_card_add"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_add_white"
+        android:elevation="4dp"
+        android:contentDescription="@string/menu_card_add_label"
+        android:visibility="gone"/>
+
+    <com.shamanland.fab.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res/com.socialimprover.saldotuc"
+        android:id="@+id/fab"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_add_white"
+        android:visibility="gone"
+        app:floatingActionButtonColor="@color/colorPrimaryDark"/>
 
 </RelativeLayout>
