--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:background="@android:color/transparent" >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent" >
 
     <LinearLayout
         android:layout_width="256dp"
@@ -10,7 +10,8 @@
         android:layout_marginTop="@dimen/cards_list_vertical_margin"
         android:id="@+id/actionsLayout"
         android:background="@drawable/card_item_actions"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/cardActionBalance"
