--- a/app/src/main/res/menu/card_add.xml
+++ b/app/src/main/res/menu/card_add.xml
@@ -6,5 +6,5 @@
         android:title="@string/menu_save_label"
         android:orderInCategory="100"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_send_now"/>
+        android:icon="@drawable/ic_done_white"/>
 </menu>
