--- a/app/src/main/res/menu/card_update.xml
+++ b/app/src/main/res/menu/card_update.xml
@@ -6,5 +6,5 @@
         android:title="@string/menu_update_label"
         android:orderInCategory="100"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_accept"/>
+        android:icon="@drawable/ic_done_white"/>
 </menu>
