--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,6 @@
         android:title="@string/menu_card_add_label"
         android:orderInCategory="100"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_new" />
+        android:icon="@drawable/ic_add_white" />
 
 </menu>
