--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#1f7fbe</color>
+    <color name="colorPrimaryDark">#0D6DAC</color>
+    <color name="colorAccent">#f08080</color>
+
+    <!-- grey -->
+    <color name="grey_600">#757575</color>
+    <color name="grey_900">#212121</color>
+
     <color name="light_gray">#efefef</color>
     <color name="apptheme_color">#1f7fbe</color>
     <color name="chart_green">#20b2aa</color>
