--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,11 +4,15 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="cards_list_horizontal_margin">8dp</dimen>
     <dimen name="cards_list_vertical_margin">8dp</dimen>
-    <dimen name="cards_list_horizontal_padding">10dp</dimen>
+    <dimen name="cards_list_horizontal_padding">8dp</dimen>
     <dimen name="cards_list_vertical_padding">8dp</dimen>
     <dimen name="chart_line_paint_stroke_width">3dp</dimen>
     <dimen name="chart_vertex_paint_stroke_width">8dp</dimen>
     <dimen name="chart_range_tick_label_font_size">12dp</dimen>
     <dimen name="chart_domain_tick_label_font_size">12dp</dimen>
     <dimen name="chart_legend_text_font_size">14dp</dimen>
+
+    <dimen name="fab_size">56dp</dimen>
+    <dimen name="button_elevation">2dp</dimen>
+    <dimen name="button_press_elevation">4dp</dimen>
 </resources>
