--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
 
         <ListView
             android:id="@android:id/list"
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:divider="@android:color/transparent"
-            android:paddingBottom="@dimen/cards_list_vertical_margin"
-            android:clipToPadding="false"
+            android:divider="#dddddd"
+            android:dividerHeight="1dp"
             android:listSelector="@color/card_item" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
