--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
@@ -8,7 +6,8 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:background="@color/colorPrimary"
-    android:minHeight="?attr/actionBarSize">
+    android:minHeight="?attr/actionBarSize"
+    android:elevation="2dp">
 
     <ProgressBar
         android:id="@+id/toolbar_progress_bar"
