--- a/app/src/main/res/layout/activity_card_update.xml
+++ b/app/src/main/res/layout/activity_card_update.xml
@@ -8,112 +8,34 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <RelativeLayout
+    <EditText
+        android:id="@+id/nameField"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:inputType="text"
+        android:hint="@string/name_hint"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/nameField"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="16dp"
-            android:inputType="text"
-            android:hint="@string/name_hint"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+        <requestFocus/>
+    </EditText>
 
-            <requestFocus/>
-        </EditText>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:id="@+id/cardField"
-            android:layout_below="@+id/nameField"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="8dp"
-            android:maxLength="8"
-            android:hint="@string/card_hint"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/card_checkbox_label"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@android:color/darker_gray"
-            android:id="@+id/notificationCheckBox"
-            android:layout_below="@+id/cardField"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:visibility="gone" />
-
-        <RelativeLayout
-            android:id="@+id/notificationLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/notificationCheckBox"
-            android:visibility="gone" >
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/phoneField"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:maxLength="8"
-                android:hint="@string/phone_hint" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/hour_label"
-                android:textColor="@android:color/darker_gray"
-                android:id="@+id/hourLabel"
-                android:layout_below="@+id/phoneField"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/hour_spinner"
-                android:layout_below="@+id/hourLabel"
-                android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@+id/ampm_spinner" />
-
-            <Spinner
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/ampm_spinner"
-                android:layout_below="@+id/hourLabel"
-                android:layout_alignParentRight="true" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineSpacingExtra="4dp"
-                android:text="@string/verification_hint"
-                android:textColor="@android:color/darker_gray"
-                android:id="@+id/textInfo"
-                android:layout_below="@+id/hour_spinner"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
+    <EditText
+        android:id="@+id/cardField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nameField"
+        android:inputType="number"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:maxLength="8"
+        android:hint="@string/card_hint"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"/>
 
 </RelativeLayout>
