--- a/android/src/main/res/layout/toolbar.xml
+++ b/android/src/main/res/layout/toolbar.xml
@@ -6,5 +6,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    app:popupTheme="@style/ActionBarPopupThemeOverlay"
-    app:theme="@style/ActionBarThemeOverlay"/>
+    android:theme="@style/ActionBarThemeOverlay"
+    app:popupTheme="@style/ActionBarPopupThemeOverlay"/>
