--- a/android/src/main/res/layout/activity_card_update.xml
+++ b/android/src/main/res/layout/activity_card_update.xml
@@ -48,7 +48,8 @@
         style="@style/InputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/cardSubscribe"
